Fixed author's name alignment

--- a/public/css/less/layout.less
+++ b/public/css/less/layout.less
@@ -323,14 +323,15 @@ article {
     margin: -20px 0 -10px 10px;
 
     .userpic {
-      vertical-align: bottom;
+      vertical-align: baseline;
       border: 3px solid #fff;
       border-radius: 100%;
     }
     
     .name {
+      position: relative;
       display: inline-block;
-      margin-top: 8px;
+      top: -5px;
     }
   }
 
